<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:gravity="center"
    android:scrollbars="vertical"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="start"
        android:text="@string/create_an_incident_report"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/incident_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autofillHints=""
        android:hint="@string/enter_incident_details"
        android:inputType="text"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.8"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/camera_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:layout_marginBottom="10dp"
            android:background="@color/grey"
            android:scaleType="centerCrop"
            android:contentDescription="@string/photo_preview" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/camera_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:textColor="@color/customPrimaryDark"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/camera" />

            <!-- Send Alert Button -->
            <Button
                android:id="@+id/send_alert_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:textColor="@color/customPrimaryDark"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/send_alert" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
