<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:ignore="NestedWeights"
    tools:context=".OneTimePassActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/enter_the_one_time_pass" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/OTPText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="Enter phone number"
            android:ems="10"
            android:maxLength="6"
            android:textSize="20sp"
            android:inputType="number"
            android:hint="@string/one_time_pass" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/verifyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="verifyButtonClicked"
            android:background="@drawable/button_selector"
            android:textColor="@color/customPrimaryDark"
            android:textStyle="bold"
            android:text="@string/verify_button" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/resendOTPCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="12dp"
            android:text="@string/resend_otp_in_60_seconds"
            android:onClick="resendOTP"
            android:gravity="center"
            />
    </LinearLayout>

</LinearLayout>