<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:ignore="NestedWeights"
    tools:context=".BugReportFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/report_a_bug" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/feedback_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="Enter username"
            android:ems="10"
            android:maxLength="200"
            android:textSize="20sp"
            android:inputType="text"
            android:hint="@string/write_your_detailed_feedback_here" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/button_selector"
            android:textColor="@color/customPrimaryDark"
            android:textStyle="bold"
            android:text="@string/submit" />
    </LinearLayout>
</LinearLayout>